Click-away in settings & searchbar border color fix in dark mode

--- a/app/globals.css
+++ b/app/globals.css
@@ -17,5 +17,5 @@ body {
 .dark .text-opposite  { color: #202020; }
 
 ::selection{
-  @apply bg-opposite bg-opacity-30 text-maroon;
+  @apply bg-[#30303050];
 }
